TIP 490(msgcat--oo):Update usage, remove implementation, now in branch

--- a/tip/490.md
+++ b/tip/490.md
@@ -19,7 +19,6 @@ This TIP defines an extension for TCLOO.
 Since TCLOO was included in the core, packages may also be defined as TCLOO classes.
 The **msgcat** package should feature an extension to support this.
 
-(anything below this point provided by Donal Fellows in the core list thread "msgcat enhancement")
 A package should have its methods within a package namespace:
 
 <pre>
@@ -49,20 +48,30 @@ package provide foo 1.0
 
 Each class which wants to use message catalogs require a call to `mixin msgcat::MessageCatalogAware`.
 
-Then, the catalog of the package namespace is available with the `mc` command
+Then, the following commands are available and correspond to the msgcat:: commands:
+
+* my mc
+* my mcmax
+* my mcexists
+
+All other mc-commands are not available within classes and should be used outside of a class.
 
 # Examples
+
+Within the following example, the message pcatalog for the package is loaded outside the method definitions.
+
+A class "Foo" is created and the msgcat capabilities are activated by the mixin.
+
+Then, a method is defined, which uses the message catalog of the namespace.
 
 <pre>
 namespace eval ::foo {
     msgcat::mcload $dir/msgs
     oo::class create Foo {
         mixin msgcat::MessageCatalogAware
-        # ...
-    }
-    oo::class create Bar {
-        mixin msgcat::MessageCatalogAware
-        # ...
+        method printMessage {x y} {
+            puts [my mc "FooPrintMessage(%d,%d)" $x $y]
+        }
     }
 }
 package provide foo 1.0
@@ -72,32 +81,8 @@ package provide foo 1.0
 
 Donal Fellows proposed two solutions in the thread started by René.
 
-The implementation is as follows:
-
-<pre>
-namespace eval ::msgcat {
-   oo::class create MessageCatalogAware {
-      forward mc       ::msgcat::OOBridge ::msgcat::mc
-      forward mcmax    ::msgcat::OOBridge ::msgcat::mcmax
-      forward mcexists ::msgcat::OOBridge ::msgcat::mcexists
-      # Tricky point: methods are not usefully callable from outside the class hierarchy
-      unexport mc mcmax mcexists
-   }
-
-   proc OOBridge {cmd args} {
-      if {[catch {
-         # Tricky point: [self class] needs to run in the caller
-         set ns [namespace qualifiers [uplevel 1 {self class}]]
-      }]} {
-         # Not a class-defined method (so we got an error); use instance instead
-         set ns [namespace qualifiers [uplevel 1 self]]
-      }
-      tailcall apply [list {cmd args} {tailcall $cmd {*}$args} $ns] $cmd
-   }
-}
-</pre>
-
-This is contained in the tcl fossil repository with tag [tip490-msgcat-oo](https://core.tcl.tk/tcl/timeline?r=tip490-msgcat-oo).
+The implementation is in tcl fossil in branch
+[tip490-msgcat-oo](https://core.tcl.tk/tcl/timeline?r=tip490-msgcat-oo).
 
 # Alternatives
 
@@ -125,74 +110,11 @@ if {[catch {set ns [uplevel 1 self class]}]} {
 
 Message catalog files can then use the class namespace.
 
-Here is an example:
-
-<pre>
-package req msgcat
-# patch msgcat::mc
-proc msgcat::mc {src args} {
-    # this may be replaced by:
-    # return [mcget -namespace [uplevel 1 [list ::namespace current]] --\
-    #             $src {*}$args]
-
-    # Check for the src in each namespace starting from the local and
-    # ending in the global.
-
-    variable Msgs
-    variable Loclist
-
-    if {[catch {set ns [uplevel 1 [list self class]]}]} {
-               set ns [uplevel 1 [list ::namespace current]]
-    }
-    set loclist [PackagePreferences $ns]
-
-    set nscur $ns
-    while {$nscur != ""} {
-                foreach loc $loclist {
-                    if {[dict exists $Msgs $nscur $loc $src]} {
-                               return [DefaultUnknown "" [dict get $Msgs $nscur $loc $src]\
-                                               {*}$args]
-                    }
-                }
-                set nscur [namespace parent $nscur]
-    }
-    # call package local or default unknown command
-    set args [linsert $args 0 [lindex $loclist 0] $src]
-    switch -exact -- [Invoke unknowncmd $args $ns result 1] {
-                0 { return [uplevel 1 [linsert $args 0 [namespace origin mcunknown]]] }
-                1 { return [DefaultUnknown {*}$args] }
-                default { return $result }
-    }
-}
-# test locale
-::msgcat mclocale de
-
-# *.msg files:
-namespace eval :: {::msgcat::mcmset de {
-  {english} {german}
-  {bla} {Bla}
-}}
-namespace eval ::A {::msgcat::mcmset de {
-  {english} {A german}
-  {bla} {A Bla}
-}}
-
-# *.tcl files:
-oo::class create A {
-  method p {} {puts [::msgcat::mc {english}]=[::msgcat::mc {bla}]}
-}
-proc p {} {puts [::msgcat::mc {english}]=[::msgcat::mc {bla}]}
-
-# test
-p
-A create a1; a1 p
-</pre>
-
 ## Use own commands for getting and setting message catalogues
 
 Eric Boudallier proposed a solution on [Wiki page "msgcat and TclOO"](http://wiki.tcl.tk/39430)
 
-There is also an addendum by Donal Fellows how to implement this is smaller way.
+There is also an addendum by Donal Fellows with an alternate implementation.
 
 ## mixin solution where superclass and subclass may not be in different namespaces:
 
@@ -261,6 +183,13 @@ package provide foo 1.0
 Alternatively, we could plug the capabilities into `oo::define`; the principles of the code are largely the same but the details are little different.
 
 I've been thinking about this more, and I've realised that there is a subtle problem: a superclass and a subclass could be in different namespaces in different packages, and so could reasonably want to use different message catalogs. This means that the bridging code always needs to look up what the context namespace is at runtime, which in turn means that there's no need for clever class manufacturing, and it can all be done with (see chpter "Implementation" above).
+
+# Credits
+
+* René Zaumseil: initiative
+* Eric Boudallier: alternate implementation
+* Donal Fellows: implementation and examples
+
 
 # Copyright
 
