More details on TIP 425, approaching votability.

--- a/tip/425.md
+++ b/tip/425.md
@@ -19,6 +19,15 @@ range, that does not give the expected output in the console.
 This TIP proposes to add a new Console panic proc to the stub
 library, and modify the Tcl\_Main\(\) macro to use it.
 
+In addition, this TIP proposes to modify the default panic
+proc on Windows, starting with Tcl 9.0. Since we now have
+a way to select a stderr-based console panic proc for
+Windows, we can change the default panic proc to be
+UI-based, as it is for Tk. This means that - starting with
+Tcl 9.0, Tk doesn't have to do anything special any more
+to have a UI-based panic implementation.
+
+
 # Rationale
 
 Many parts of Tcl use Unicode since Tcl 8.6: The command
@@ -75,8 +84,8 @@ applications, and can deliver the message in 3 possible ways
 
 * If a \(Windows\) debugger is running, the message is sent there.
 
-* If stderr is connected to a Windows console, the message is
-sent there \(Windows only\).
+* If stderr is connected to a \(Windows\) console, the message is
+sent there.
 
 * Otherwise, the UTF-8 BOM \(3 bytes\) is written followed by
 the unmodified message \(assumed to be in UTF-8\).
@@ -102,6 +111,20 @@ The function is available from the stub library, in
 order to bring the responsibility for correct linking
 to the embedding application, in stead of Tcl. In
 case of tclsh.exe, this makes no difference.
+
+In additon, starting with Tcl 9.0, the default
+panic proc is changed to direct the output to the
+UI in stead of stderr. Since the new _Tcl\_ConsolePanic_
+is meant for stderr-related output, this means
+that Tk (or other applications embedding Tcl) don't
+have to do anything special to have a UI-based
+panic proc.
+
+Another \(minor\) modification: the Cygwin panic proc is
+adapted to output the UTF-8 BOM to stderr first,
+as does the Windows panic proc, if stderr is sent to a
+character device. This improves the interoperability
+between Cygwin and Windows.
 
 # Reference Implementation
 
