_not_ a character device

--- a/tip/425.md
+++ b/tip/425.md
@@ -104,7 +104,7 @@ WriteConsoleW\(\) can handle in a single call. See:
 <https://connect.microsoft.com/VisualStudio/feedback/details/635230> 
 If the message is longer than that, the string is
 truncated and three dots appended to it. If
-the message is sent to a character device, the
+the message is not sent to a character device, the
 UTF-8 BOM is prepended.
 
 The function is available from the stub library, in
@@ -122,7 +122,7 @@ panic proc.
 
 Another \(minor\) modification: the Cygwin panic proc is
 adapted to output the UTF-8 BOM to stderr first,
-as does the Windows panic proc, if stderr is sent to a
+as does the Windows panic proc, if stderr is not sent to a
 character device. This improves the interoperability
 between Cygwin and Windows.
 
