Exchange error for the empty string as return result of 'tk busy busywindow' if the window passed to it is not busy

--- a/tip/492.md
+++ b/tip/492.md
@@ -24,7 +24,7 @@ As a consequence, this logic needs to be known by any user of the **tk busy** co
 It is proposed to:
 
 1. Let the **tk busy hold** subcommand (and its shortcut **tk busy**) return the pathname of the busy window instead of the empty string.
-2. Provide a new subcommand **tk busy busywindow** to return that same information, or trigger an error if the windows passed to it is currently not busy.
+2. Provide a new subcommand **tk busy busywindow** to return that same information, or the empty string if the windows passed to it is currently not busy.
 
 
 # Implementation
