--- a/tip/488.md
+++ b/tip/488.md
@@ -1,8 +1,8 @@
 # TIP 488: Remove tcl_precision
 	Author:         Arjen Markus <arjenmarkus@users.sourceforge.net>
-	State:          Voting
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        24-Nov-2017
 	Post-History:
 	Keywords:       Tcl, string representation, floating-point
