--- a/tip/491.md
+++ b/tip/491.md
@@ -25,7 +25,7 @@ Non-threaded builds have a number of known problems:
 
 	* On UNIX, the new epoll() and kqueue() notifiers (TIP #458) expect the pthread locking to be available.
 
-Further on, the nmake build system uses a different prefix "t" than the autoconf-based build system, a historical
+Further on, the nmake build system uses a different suffix "t" than the autoconf-based build system, a historical
 mistake that cannot be corrected in a patch release. Let's correct that in Tcl 8.7.
 
 A common misconception is that non-threaded builds are necessary to make vfork and/or signals work correctly. That
@@ -51,12 +51,12 @@ everything should work fine. Applications like AOLserver use this already.
 
 This means that the (nmake/autoconf) build systems no longer need to explicitely set those
 two options, a threaded build will be the default. Non-threaded builds are still possible,
-adding the flag "-DTCL_THREADS=0" to the makefile. Hopefully this further discourages
+adding the flag "-DTCL_THREADS=0" to the Makefile. Hopefully this further discourages
 non-threaded builds.
 
   * In the autoconf build system, remove the --disable-threads option.
 
-  * In the nmake build system, don't use "t" any longer as prefix, and remove the "nothreads" and "thrdalloc" build options.
+  * In the nmake build system, don't use "t" any longer as suffix, and remove the "nothreads" and "thrdalloc" build options.
 
   * In Tcl 9, fully remove the use of TCL_THREADS throughout the whole source code. The value "1" is assumed
     everywhere. Non-threaded builds are no longer possible.
