Describe more changes in tip-389 branch

--- a/tip/389.md
+++ b/tip/389.md
@@ -74,6 +74,28 @@ This document proposes:
    range **U\+0E0100** - **U\+0E01EF**, otherwise it would almost double the
    Unicode table size.
 
+ * Extend the _Tcl\_UtfToUniChar_ function such that the invalid bytes
+   0x80 up to 0x9F are interpreted as the cp1252 characters € up to Ÿ
+   instead of the (not-existing) Unicode characters U\+0080 - U\+009F.
+   Since cp1252 is the mostly used Windows codepage, which is upwards
+   compatible with ISO 8859-1, this adheres more to what's intuitively
+   expected behavior. Many current UTF-8 converters nowadays use this.
+   See also [here](https://en.wikipedia.org/wiki/UTF-8#Invalid_byte_sequences)
+
+ * If Tcl is compiled with -DTCL\_UTF\_MAX=6, use a different TCL_MAGIC
+   value. Since extensions compiled with -DTCL\_UTF\_MAX=6 are binary
+   incompatible with normally-compiled Tcl, this causes extensions
+   compiled with this same options no longer being loadable in normal
+   Tcl and reverse. Note that TCL\_UTF\_MAX=6 compiles are still not officially
+   supported, and needs a lot of additional fixes to make it work right.
+
+ * Change the Windows-only functions Tcl\_WinTchar2Utf and Tcl\_WinUtf2TChar
+   to using only the Win32 API functions in its implementation. This means
+   that the Tcl encoding system no longer needs to be initialized in
+   order for those functions to work. (This cannot be done with TCL\_UTF\_MAX=3,
+   because the Windows API might produce 4-byte UTF-8 sequences, which Tcl
+   cannot handle then)
+
 # Compatibility
 
 As long as no Surrogates or characters >= **U\+010000** are used, all
@@ -99,6 +121,17 @@ when the first character of a string is a character > **U\+010000** might
 result in a Low Surrogate character only. This danger, however unlikely, only
 exists for the first character in a string, and it only occurs when the
 \(random\) value is exactly equal to the expected High Surrogate.
+
+# Caveats
+
+In the current implementation "string length \U10000" will return 2 in
+stead of the expected 1. The reason for this is that many internal
+operations convert the representation into UTF-16 format, which occupies
+two surrogate characters. This might change in future Tcl implementations.
+Correcting this would involve many internal changes, and the risk of
+introducing crashes because of miscounting bytes (as have been reported
+in the past, during the tip-389 branch implementation development).
+Tcl is not the only language doing it this way: javascript does it as well.
 
 # Reference Implementation
 
