correct some formatting

--- a/tip/389.md
+++ b/tip/389.md
@@ -76,7 +76,7 @@ This document proposes:
 
  * Extend the _Tcl\_UtfToUniChar_ function such that the invalid bytes
    0x80 up to 0x9F are interpreted as the cp1252 characters € up to Ÿ
-   instead of the (not-existing) Unicode characters U\+0080 - U\+009F.
+   instead of the (not-existing) Unicode characters **U\+0080** - **U\+009F**.
    Since cp1252 is the mostly used Windows codepage, which is upwards
    compatible with ISO 8859-1, this adheres more to what's intuitively
    expected behavior. Many current UTF-8 converters nowadays use this.
@@ -124,7 +124,7 @@ exists for the first character in a string, and it only occurs when the
 
 # Caveats
 
-In the current implementation "string length \U10000" will return 2 in
+In the current implementation "string length \\U10000" will return 2 in
 stead of the expected 1. The reason for this is that many internal
 operations convert the representation into UTF-16 format, which occupies
 two surrogate characters. This might change in future Tcl implementations.
@@ -136,7 +136,7 @@ Tcl is not the only language doing it this way: javascript does it as well.
 # Reference Implementation
 
 A reference implementation is available at <http://core.tcl.tk/tcl> in branch
-tip-389-impl
+tip-389
 
 # Copyright
 
