Updated 351 for implementation of lsearch -stride

--- a/tip/351.md
+++ b/tip/351.md
@@ -31,16 +31,18 @@ facility for searching such lists; this TIP proposes fixing this.
 
 We propose adding a **-stride** option to **lsearch**, by exact analogy with the option added to **lsort** in [[326]](326.md), whose semantics it should closely match.
 
-If **-stride** is supplied, the list will be treated as consisting of groups of grpSize elements.
-The search will be operated within this group as it is a first level of nested lists \(see _Conceptual Backround_ below\).
+If **-stride** is supplied, the list will be treated as consisting of groups of **grpSize** elements.
+The search will be operated within this group as if it is a first level of nested lists \(see _Conceptual Backround_ below\).
 
-The first element of **-index** is used to seach for an item of the group.
+The first element of **-index** is used to seach for an item of the group. If **-stride** is given, **-index** defaults to 0.
 
 The option **-start** always points to the beginning of the group, even if a position within the group is given.
 
 Returned indices are the first element of the striding group\(s\) that is/are being indicated.
 
 The list length must be a multiple of **grpSize**, which in turn must be at least 2.
+
+With **-inline**, the return value is a strided list if length **grpSize** (or multiple of, with **-all**).
 
 # Conceptual Backround
 
@@ -66,6 +68,8 @@ It interpretes **-index ""** as **-index 0**:
 	A 1 A 2 A 0
 	% lsort -stride 2 -index "" {B 2 B 1 A 3}
 	A 3 B 2 B 1
+
+For symmetry this TIP proposes the same behaviour for lsearch.
 
 ## Numeric position indices
 
@@ -98,19 +102,14 @@ Example 3: extract a sub-kv-list starting from key K2:
 	% lrange $kvlist [lsearch -stride 2 -index 0 -exact $kvlist K2] end
 	K2 V1 K1 K1
 
-Example 4: find a group within a list:
-
-	% lsearch -stride 2 -exact $kvlist {K2 V1}
-	2
-
-Example 5: find in combined strided and nested list
+Example 4: find in combined strided and nested list
 
 	% lsearch -stride 2 -index {1 1} -exact\
 	        {K0 {V0.0 V0.1} K1 {V1.0 V1.1}}\
 	        V1.1
 	2
 
-Example 6: subindices with strided list:
+Example 5: subindices with strided list:
 
 	% lsearch -stride 2 -index {1 1} -subindices {1 {a A} 2 {b B}} B
 	3 1   (that is: 2 for the group-start plus 1 for the intra-group
@@ -124,6 +123,10 @@ to be consisten with:
 	1 1 1
 	% lindex {{1 {a A}} {2 {b B}}} 1 1 1
 	B
+
+# Implementation
+
+Is available in tip-351 branch.
 
 # Copyright
 
