--- a/tip/389.md
+++ b/tip/389.md
@@ -82,12 +82,12 @@ This document proposes:
    expected behavior. Many current UTF-8 converters nowadays use this.
    See also [here](https://en.wikipedia.org/wiki/UTF-8#Invalid_byte_sequences)
 
- * If Tcl is compiled with -DTCL\_UTF\_MAX=6, use a different TCL_MAGIC
+ * If Tcl is compiled with -DTCL\_UTF\_MAX=6, use a different TCL\_STUB\_MAGIC
    value. Since extensions compiled with -DTCL\_UTF\_MAX=6 are binary
    incompatible with normally-compiled Tcl, this causes extensions
    compiled with this same options no longer being loadable in normal
    Tcl and reverse. Note that TCL\_UTF\_MAX=6 compiles are still not officially
-   supported, and needs a lot of additional fixes to make it work right.
+   supported, a lot of additional fixes are needed to make it work right.
 
  * Change the Windows-only functions Tcl\_WinTchar2Utf and Tcl\_WinUtf2TChar
    to using only the Win32 API functions in its implementation. This means
@@ -133,10 +133,15 @@ introducing crashes because of miscounting bytes (as have been reported
 in the past, during the tip-389 branch implementation development).
 Tcl is not the only language doing it this way: javascript does it as well.
 
+This also means that functions line "string range" and "string reverse"
+might give strange results when characters > **U\+010000** are involved.
+The two (internal) UTF-16 surrogates are handled as two separate characters,
+which no longer form a valid pair after the operation.
+
 # Reference Implementation
 
-A reference implementation is available at <http://core.tcl.tk/tcl> in branch
-tip-389
+A reference implementation is available in the [tip-389 branch]
+(https://core.tcl.tk/tk/timeline?r=tip-389).
 
 # Copyright
 
