TIP490: oo for msgcal: new solution enable any command for oo, new command mcpackagenamespaceget

--- a/tip/490.md
+++ b/tip/490.md
@@ -12,19 +12,18 @@
 # Abstract
 
 Package **msgcat** implements message catalogues for packages organized in nested namespaces.
-This TIP defines an extension for TCLOO.
+This TIP proposes the extension to TclOO.
 
 # Rationale
 
-Since TCLOO was included in the core, packages may also be defined as TCLOO classes.
-The **msgcat** package should feature an extension to support this.
+Since TCLOO was included in the core, packages may also be defined as TCLOO classes or classless objects.
+The **msgcat** package should feature this.
 
 A package should have its methods within a package namespace:
 
 <pre>
 namespace eval ::foo {
     oo::class create Foo
-    oo::class create Bar
 }
 package provide foo 1.0
 </pre>
@@ -37,14 +36,239 @@ namespace eval ::foo {
     oo::class create Foo {
         # ...
     }
-    oo::class create Bar {
-        # ...
-    }
 }
 package provide foo 1.0
 </pre>
 
 # Documentation
+
+There are 3 use-cases to consider (which may be intermixed in the same package):
+
+(with 'Servus!' as translation for 'Hi!')
+
+## Use-Case 1: the package does not use OO
+
+<pre>
+namespace import msgcat::*
+namespace eval ::N1 {
+    mcload $dir/msgs
+    proc m1 {} {
+        puts [mc Hi!]
+    }
+}
+
+% N1::m1
+Servus!
+</pre>
+
+## Use-case 2: The package implementation is done by a class
+
+<pre>
+namespace import msgcat::*
+namespace eval ::N2Class {
+    mcload $dir/msgs
+    oo::class create C1
+    oo::define C1 method m1 {
+        puts [mc Hi!]
+    }
+}
+
+# The class object may be used in another namespace
+namespace eval ::N2Obj {
+    set O1 [::N2Class::C1 new]
+}
+
+% $N2Obj::O1 m1
+Servus!
+</pre>
+
+## Use-case 3: The package implementation is done by a classless object
+
+<pre>
+namespace import msgcat::*
+namespace eval ::N3 {
+    mcload $dir/msgs
+    oo::object create O2
+    oo::objdefine O2 method m1 {} {
+        puts [mc Hi!]
+    }
+}
+
+% N3::O2 m1
+Servus!
+</pre>
+
+# Usage
+
+There are two extensions proposed:
+
+## Extend all msgcat commands to support all 3 use-cases.
+
+So any **msgcat** command will detect the scenario on its own and extract the package namespace automatically.
+
+The commands which are packet-namespace related are: **mc**, **mcexists**, **mcpackagelocale**, **mcforgetpackage**, **mcpackagenamespaceget** (new command, see below), **mcpackageconfig**, **mcset** and **mcmset**.
+
+This has the following advantages (compared to the alternatives):
+
+* no new commands, no learning
+* if another foreign procedure is called and the procedure wants to use the callers message catalog, it may just use "uplevel 1 {msgcat tag}" and does not need to know if it is a class or not.
+
+Here is an example for the second advantage:
+
+The tklib package "tooltip" may invoke "msgcat::mc msg" for all textes to get eventual translations (it does something like that but I don't understand it, IMHO broken).
+The package namespace of the caller should be used (not the one of the tooltip package).
+
+So:
+<pre>
+proc ::tooltip::tooltip {widget message} {
+    ...
+    set message [uplevel 1 {::msgcat::mc $message}]
+}
+</pre>
+
+This will work in all use-cases, e.g. if tooltip::tooltip is called by a method following use-case 1 to 3.
+
+## new command to get package namespace
+
+The "magic" to extract the package namespace is exposed by the command:
+
+<pre>
+mcpackagenamespaceget
+</pre>
+
+This may be used:
+
+* for the same case like the upper tooltip example, but for late binding
+* for introspection and debugging
+
+The upper tooltip example, where the translation is extracted when the tooltip is actually shown (to show an updated message if the current locale changed)
+
+<pre>
+proc ::tooltip::tooltip {widget message} {
+    ...
+    set messagenamespace [uplevel 1 {::msgcat::mcpackagenamespaceget}]
+}
+
+proc ::tooltip::show {widget messagenamespace message} {
+    ...
+    set message [namespace eval $messagenamespace [list ::msgcat::mc $message]]
+}
+</pre>
+
+Examples with the 3 use-cases:
+
+## Use-case 1: the package does not use OO
+
+<pre>
+namespace eval ::N1 {
+    proc m1 {} {msgcat::mcpackagenamespaceget}
+}
+
+% N1::m1
+::N1
+</pre>
+
+## Use-case 2: The package implementation is done by a class
+
+namespace eval ::N2Class {
+    oo::class create C1
+    oo::define C1 method m1 {msgcat::mcpackagenamespaceget}
+}
+
+# The class object may be used in another namespace
+namespace eval ::N2Obj {
+    set O1 [::N2Class::C1 new]
+}
+
+% $N2Obj::O1 m1
+::N2Class
+</pre>
+
+## Use-case 3: The package implementation is done by a classless object
+
+<pre>
+namespace eval ::N3 {
+    oo::object create O2
+    oo::objdefine O2 method m1 {} {msgcat::mcpackagenamespaceget}
+}
+
+% N3::O2 m1
+::N3
+</pre>
+
+# Implementation
+
+Within **msgcat**, the package namespace is currently extracted by:
+
+<pre>
+proc msgcat::mc {src args} {
+    ...
+    set ns [uplevel 1 {namespace current}]
+</pre>
+
+This is replaced by:
+
+<pre>
+proc msgcat::mc {src args} {
+    ...
+    set ns [PackageNamespaceGet]
+    ...
+}
+proc ::msgcat::PackageNamespaceGet {} {
+    uplevel 2 {
+        # Check for no object
+        if {0 == [llength [info commands self]]} {return [namespace current]}
+        # Get Class
+        set Class [info object class [self]]
+        # Check for a classless object
+        if {$Class eq {::oo::object}} {
+            return [namespace qualifiers [self]]
+        }
+        # Object defined by class
+        return [namespace qualifiers $Class]
+    }
+}
+</pre>
+
+The implementation is in tcl fossil in branch
+[tip490-msgcat-oo-2](https://core.tcl.tk/tcl/timeline?r=tip490-msgcat-oo-2).
+
+# Discussion
+
+## Issue 1: a proc called "self" in use-case 1 will make a false detection.
+
+<pre>
+namespace eval ::N1 {
+    proc m1 {} {msgcat::mcpackagenamespaceget}
+    proc self {args} {...}
+}
+
+% N1::m1
+no class error
+</pre>
+
+## Issue 2: are really all oo use-cases covered ?
+
+Gosts like multiple inheritance, mixins, filters whatever are calling...
+
+## Issue 3: performance loss
+
+There is a performance penalty due to the modification described in "implementation".
+
+To not decrease performance would require to introduce new commands, what I think is not good.
+
+There is another idea of a low-level command: **mcn namespace key args** which does the final work of **mc**.
+Then, the namespace may be cached and passed each time as argument.
+
+In addition, this is useful if called by a foreign context, like from C or a foreign package (like the upper tooltip example or the wizard package).
+
+Nevertheless, I would leave this for another TIP.
+
+# Alternatives
+
+## Use a mixin
+
+Proposed by Donal Fellows
 
 Each class which wants to use message catalogs require a call to `mixin msgcat::MessageCatalogAware`.
 
@@ -58,7 +282,7 @@ All other mc-commands are not available within classes and should be used outsid
 
 # Examples
 
-Within the following example, the message pcatalog for the package is loaded outside the method definitions.
+Within the following example, the message catalog for the package is loaded outside the method definitions.
 
 A class "Foo" is created and the msgcat capabilities are activated by the mixin.
 
@@ -77,14 +301,8 @@ namespace eval ::foo {
 package provide foo 1.0
 </pre>
 
-# Implementation
-
-Donal Fellows proposed two solutions in the thread started by René.
-
 The implementation is in tcl fossil in branch
 [tip490-msgcat-oo](https://core.tcl.tk/tcl/timeline?r=tip490-msgcat-oo).
-
-# Alternatives
 
 ## Use namespace of the caller
 
