clearify new behavior of "string index" and "string range"

--- a/tip/389.md
+++ b/tip/389.md
@@ -133,10 +133,27 @@ introducing crashes because of miscounting bytes (as have been reported
 in the past, during the tip-389 branch implementation development).
 Tcl is not the only language doing it this way: javascript does it as well.
 
-This also means that functions line "string range" and "string reverse"
-might give strange results when characters > **U\+010000** are involved.
-The two (internal) UTF-16 surrogates are handled as two separate characters,
-which no longer form a valid pair after the operation.
+This also means that functions line "string index", "string range" and
+"string reverse" might give unexpected results when characters > **U\+010000**
+are involved. Any index pointing to the middle of a 'double-length' Unicode
+character will be handled as if the index points to just after the character
+instead. So:
+
+In Tcl 8.7 with TIP #389:
+
+    % string length "a\U100000b"
+    4
+    % scan %c \U100000
+    1048576  -> (this is the correct Unicode character)
+    % string length [string index "a\U100000b" 1]
+    2        -> (the Unicode character has length 2)
+    % string length [string index "a\U100000b" 2]
+    0        -> (So we cannot access the lower surrogate separately)
+
+So, the "string length" of a Unicode character >U+FFFF is 2, and if you try to
+split it in two separate characters that won't work: It will then be split
+in a character with length 2 (the original one) and another character with
+length 0 (the empty string).
 
 # Reference Implementation
 
