Small editorial corrections to TIP 490

--- a/tip/490.md
+++ b/tip/490.md
@@ -16,7 +16,7 @@ This TIP proposes the extension to TclOO.
 
 # Rationale
 
-Since TCLOO was included in the core, packages may also be defined as TCLOO classes or classless objects.
+Since TclOO was included in the core, packages may also be defined as TclOO classes or classless objects.
 The **msgcat** package should feature this.
 
 A package should have its methods within a package namespace:
@@ -115,7 +115,7 @@ This has the following advantages (compared to the alternatives):
 
 Here is an example for the second advantage:
 
-The tklib package "tooltip" may invoke "msgcat::mc msg" for all textes to get eventual translations (it does something like that but I don't understand it, IMHO broken).
+The tklib package "tooltip" may invoke `msgcat::mc msg` for all textes to get eventual translations (it does something like that but I don't understand it, IMHO broken).
 The package namespace of the caller should be used (not the one of the tooltip package).
 
 So:
@@ -126,7 +126,7 @@ proc ::tooltip::tooltip {widget message} {
 }
 </pre>
 
-This will work in all use-cases, e.g. if tooltip::tooltip is called by a method following use-case 1 to 3.
+This will work in all use-cases, e.g. if `tooltip::tooltip` is called by a method following use-case 1 to 3.
 
 ## new command to get package namespace
 
@@ -170,12 +170,14 @@ namespace eval ::N1 {
 
 ## Use-case 2: The package implementation is done by a class
 
+<pre>
 namespace eval ::N2Class {
     oo::class create C1
     oo::define C1 method m1 {msgcat::mcpackagenamespaceget}
 }
 
 # The class object may be used in another namespace
+
 namespace eval ::N2Obj {
     set O1 [::N2Class::C1 new]
 }
@@ -272,7 +274,7 @@ Proposed by Donal Fellows
 
 Each class which wants to use message catalogs require a call to `mixin msgcat::MessageCatalogAware`.
 
-Then, the following commands are available and correspond to the msgcat:: commands:
+Then, the following commands are available and correspond to the `msgcat::` commands:
 
 * my mc
 * my mcmax
@@ -308,7 +310,7 @@ The implementation is in tcl fossil in branch
 
 Proposed by René Zaumseil in tclcore post "msgcat enhancement" 2017-12-16 17:11 UTC.
 
-msgcat::mc will translate messages with respect to the calling namespace.
+`msgcat::mc` will translate messages with respect to the calling namespace.
 In case of tcloo methods we will be called in the namespace of the object.
 I propose to use instead the namespace of the class.
 
@@ -400,7 +402,7 @@ package provide foo 1.0
 
 Alternatively, we could plug the capabilities into `oo::define`; the principles of the code are largely the same but the details are little different.
 
-I've been thinking about this more, and I've realised that there is a subtle problem: a superclass and a subclass could be in different namespaces in different packages, and so could reasonably want to use different message catalogs. This means that the bridging code always needs to look up what the context namespace is at runtime, which in turn means that there's no need for clever class manufacturing, and it can all be done with (see chpter "Implementation" above).
+I've been thinking about this more, and I've realised that there is a subtle problem: a superclass and a subclass could be in different namespaces in different packages, and so could reasonably want to use different message catalogs. This means that the bridging code always needs to look up what the context namespace is at runtime, which in turn means that there's no need for clever class manufacturing, and it can all be done with (see section "Implementation" above).
 
 # Credits
 
@@ -412,4 +414,3 @@ I've been thinking about this more, and I've realised that there is a subtle pro
 # Copyright
 
 This document has been placed in the public domain.
-
