New "in-object test" proposed by dkf solves issue 1 - thanks !

--- a/tip/490.md
+++ b/tip/490.md
@@ -217,7 +217,10 @@ proc msgcat::mc {src args} {
 proc ::msgcat::PackageNamespaceGet {} {
     uplevel 2 {
         # Check for no object
-        if {0 == [llength [info commands self]]} {return [namespace current]}
+        # (undocumented test proposed by dkf 2018-01-12)
+        if { [namespace which self] ne "::oo::Helpers::self"} {
+            return [namespace current]
+        }
         # Get Class
         set Class [info object class [self]]
         # Check for a classless object
@@ -235,23 +238,11 @@ The implementation is in tcl fossil in branch
 
 # Discussion
 
-## Issue 1: a proc called "self" in use-case 1 will make a false detection.
-
-<pre>
-namespace eval ::N1 {
-    proc m1 {} {msgcat::mcpackagenamespaceget}
-    proc self {args} {...}
-}
-
-% N1::m1
-no class error
-</pre>
-
-## Issue 2: are really all oo use-cases covered ?
+## Issue 1: are really all oo use-cases covered ?
 
 Gosts like multiple inheritance, mixins, filters whatever are calling...
 
-## Issue 3: performance loss
+## Issue 2: performance loss
 
 There is a performance penalty due to the modification described in "implementation".
 
@@ -407,6 +398,7 @@ I've been thinking about this more, and I've realised that there is a subtle pro
 * René Zaumseil: initiative
 * Eric Boudallier: alternate implementation
 * Donal Fellows: implementation and examples
+* Ashok P. Nadkarni: teach me oo by his excellent book
 
 
 # Copyright
