Described new command "mcn" as "mc" with explicite namespace

--- a/tip/490.md
+++ b/tip/490.md
@@ -100,9 +100,9 @@ Servus!
 
 # Usage
 
-There are two extensions proposed:
+There are three extensions proposed:
 
-## Extend all msgcat commands to support all 3 use-cases.
+## Extension 1: Extend all msgcat commands to support all 3 use-cases.
 
 So any **msgcat** command will detect the scenario on its own and extract the package namespace automatically.
 
@@ -128,7 +128,7 @@ proc ::tooltip::tooltip {widget message} {
 
 This will work in all use-cases, e.g. if `tooltip::tooltip` is called by a method following use-case 1 to 3.
 
-## new command to get package namespace
+## Extension 2: new command to get package namespace
 
 The "magic" to extract the package namespace is exposed by the command:
 
@@ -157,7 +157,7 @@ proc ::tooltip::show {widget messagenamespace message} {
 
 Examples with the 3 use-cases:
 
-## Use-case 1: the package does not use OO
+### Use-case 1: the package does not use OO
 
 <pre>
 namespace eval ::N1 {
@@ -168,7 +168,7 @@ namespace eval ::N1 {
 ::N1
 </pre>
 
-## Use-case 2: The package implementation is done by a class
+### Use-case 2: The package implementation is done by a class
 
 <pre>
 namespace eval ::N2Class {
@@ -186,7 +186,7 @@ namespace eval ::N2Obj {
 ::N2Class
 </pre>
 
-## Use-case 3: The package implementation is done by a classless object
+### Use-case 3: The package implementation is done by a classless object
 
 <pre>
 namespace eval ::N3 {
@@ -196,6 +196,49 @@ namespace eval ::N3 {
 
 % N3::O2 m1
 ::N3
+</pre>
+
+## Extension 3: new command to get a translation with a package namespace as argument
+
+A new command is proposed to get a translation with an explicit namespace:
+<pre>
+mcn ns src args...
+</pre>
+with the arguments:
+* ns: package namespace to do the translation for
+* src: the translation source string (like mc command)
+* args: eventual arguments to contained format patterns (like mc command)
+
+This command is identical to the `mc` command, with the difference, that the package namespace is not found by an implicit call to `mcpackagenamespaceget`, but may be explicitly specified as first argument
+
+Then, the mc command may be expressed like:
+<pre>
+mcn [mcpackagenamespaceget] src args...
+</pre>
+
+There are the following purposes for this command:
+* foreign packages. The package namespace is known (for example by a call to `mcpackagenamespaceget`). The translation may be retrieved by a call to `mcn` without any `namespace eval $ns` around it.
+* Authors of C packages required to specify the namespace explicitly.
+* Optimizations in an eventual time critical path. The speed of the old msgcat is beaten by `mcn [namespace current]..`
+
+An example for the case of a foreign package is the tooltip package described above.
+
+The contained call:
+
+<pre>
+proc ::tooltip::show {widget messagenamespace message} {
+    ...
+    set message [namespace eval $messagenamespace [list ::msgcat::mc $message]]
+}
+</pre>
+
+may be expressed like:
+
+<pre>
+proc ::tooltip::show {widget messagenamespace message} {
+    ...
+    set message [::msgcat::mcn $messagenamespace $message]
+}
 </pre>
 
 # Implementation
@@ -249,13 +292,9 @@ Gosts like multiple inheritance, mixins, filters whatever are calling...
 There is a performance penalty due to the modification described in "implementation".
 
 To not decrease performance would require to introduce new commands, what I think is not good.
+We would loose the flexibility and backward compatibility to just insert a 3rd party package, which may call "uplevel 1 msgcat::mc tag", and it works.
 
-There is another idea of a low-level command: **mcn namespace key args** which does the final work of **mc**.
-Then, the namespace may be cached and passed each time as argument.
-
-In addition, this is useful if called by a foreign context, like from C or a foreign package (like the upper tooltip example or the wizard package).
-
-Nevertheless, I would leave this for another TIP.
+For performance enthusiasts, one may use "mcn", which may be little faste than former msgcat.
 
 # Alternatives
 
