--- a/tip/485.md
+++ b/tip/485.md
@@ -1,8 +1,8 @@
 # TIP 485: Remove Deprecated API
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Voting
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        08-Nov-2017
 	Post-History:   
 	Tcl-Version:    9.0
